fixed letter spacing

--- a/index.css
+++ b/index.css
@@ -147,7 +147,7 @@ hr {
     font-weight: 500;
     font-size: 30px;
     line-height: 36px;
-    letter-spacing: -0.15em;
+    letter-spacing: -0.015em;
     color: var(--text-color-dark);
     text-transform: uppercase;
     text-align: left;
